--- a/assignments/exercises/practice/newsies/index.html
+++ b/assignments/exercises/practice/newsies/index.html
@@ -8,23 +8,29 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h1>There Are No New Ideas</h1>
+    <header>There Are No New Ideas</header>
 
-    <p>“Derivative.” It sounds complicated, and you may have heard it in a negative context before. But what
+    img src="https://www.wallpaperflare.com/static/1020/153/296/twin-braids-emotions-girl-wallpaper.jpg" alt="Twins Facing Off">
+
+    <section>“Derivative.” It sounds complicated, and you may have heard it in a negative context before. But what
         does it mean when it comes to quilting? First, let’s define the word. According to the Oxford dictionary, a
         derivative is “(typically of an artist or work of art) imitative of the work of another person; originating
         from, based on, or influenced by.” In the quilt world, this means that if you make a quilt using someone
-        else’s pattern, artwork, photography, or quilt design, it’s a derivative.
-
-        <img src="https://www.wallpaperflare.com/static/1020/153/296/twin-braids-emotions-girl-wallpaper.jpg" alt="Twins Facing Off">
-
-    <h2>Inspired By?</h2>
-    <p>Ever heard the phrase “inspiration is everywhere?” If you’re looking at all, it is. We are bombarded with
+        else’s pattern, artwork, photography, or quilt design, it’s a derivative.</section>
+ 
+    <br>
+    <header>Inspired By?</header>
+    <br>
+    <section>Ever heard the phrase “inspiration is everywhere?” If you’re looking at all, it is. We are bombarded with
         inspiration: on Instagram, in quilt shows, and all over the Internet. Modern art and graphic design are
         ripe with inspiration for modern quilts.
         <br>
         <br>
         Steven Bradley wrote an informative post, The Line Between
-        Inspired By and Copied From and How to Stay On Its Right Side.</p>
+        Inspired By and Copied From and How to Stay On Its Right Side.</section>
+    <br>
+    <br>
+    <footer>Visit seattlemodernquiltguild.org for more informaiton</footer>
+    
     </body>
 </html>
