--- a/assignments/projects/businesstime/index.html
+++ b/assignments/projects/businesstime/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <h1 id="headline">Nap Happy</h1>
+    <h1 class="headline">Nap Happy</h1>
     <nav class="clicks">
         <div>Locations</div>
         <div>Book Your Nap</div>
@@ -20,7 +20,14 @@
         <p>Sometimes You Just Deserve A Nap</p>
     </div>
         <div class="pics">
-            <img src="https://images.unsplash.com/photo-1520708042595-5af519e821e5?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=934e24c93612a3c22aed09b84586fc98&auto=format&fit=crop&w=800&q=60">
+            <img id="lady" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS_YQLuzIWLJMXjlP_pYkkoQqWuI_YrY79_b9ZVI-uayS3Iq1DT">
+            <p class="words">Ask about our Platimun Pillow Club.</p>
+            <img id="pillows" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcRCcvjWeGCE9jMZ7H0TKr6xnC5eF2nZaRjSfZu3IIpQ0vfX3HTw">
         </div>
+<footer class=footer>
+    <p id= address>4444 Sleeping Beauty Way Seattle, WA 98122</p>
+    <a id="email" href="https://www.naphappy.com/html/">Visit Our Website</a>
+    <p></p>
+</footer>
 </body>
 </html>
