most up to date project

--- a/assignments/projects/businesstime/index.html
+++ b/assignments/projects/businesstime/index.html
@@ -8,13 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
     <h1 class="headline">Nap Happy</h1>
     <nav class="clicks">
-        <div>Locations</div>
-        <div>Book Your Nap</div>
-        <div>Membership Information</div>
-        <div>Contact Us</div>
+            <a href="locations.html" target="_blank">Locations</a>
+            <a href="book.html" target="_blank">Book Your Nap</a>
+            <a href="membership.html" target="_blank">Membership Information</a>
+            <a href="contact.html" target="_blank">Contact Us</a>
     </nav>
     <div class="nap">
         <p>Sometimes You Just Deserve A Nap</p>
