moving on in the game

--- a/assignments/projects/businesstime/index.html
+++ b/assignments/projects/businesstime/index.html
@@ -24,7 +24,7 @@
             <img id="pillows" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQcRCcvjWeGCE9jMZ7H0TKr6xnC5eF2nZaRjSfZu3IIpQ0vfX3HTw">
         </div>
 <footer class=footer>
-    <p id= address>4444 Sleeping Beauty Way Seattle, WA 98122</p>
+    <p id="address">4444 Sleeping Beauty Way Seattle, WA 98122</p>
     <a id="email" href="https://www.naphappy.com/html/">Visit Our Website</a>
     <p></p>
 </footer>
