--- a/assignments/exercises/practice/axios/index.html
+++ b/assignments/exercises/practice/axios/index.html
@@ -4,22 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Todo</title>
+    <title>To Do</title>
 </head>
 <body>
-    <h1>TODO LIST</h1>
-
+    <h1>TO DO LIST</h1>
     <form name="addTodo">
         <input type="text" name="title" placeholder="Title">
         <input type="text" name="description" placeholder="Description">
         <input type="number" name="price" placeholder="Price">
-        <button>Submit</button>
+        <button>Add To List</button>
     </form>
-
     <div id="todos">
-
     </div>
-
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="app.js" type="text/javascript"></script>
 </body>
