--- a/assignments/projects/zengarden/index.html
+++ b/assignments/projects/zengarden/index.html
@@ -32,7 +32,7 @@
         </section>
 <div class"main supporting" id="zen-supporting">
     <div class="explanation" id="zen-explanation">
-        <h3>SO WHat is This About?</h3>
+        <h3>So What is This About?</h3>
         <p>There is a continuing need to show the power of CSS. The Zen Garden aims to excite, inspire, and encourage participation. To begin, view some of the existing designs in the list. Clicking on any one will load the style sheet into this very page. The HTML remains the same, the only thing that has changed is the external CSS file. Yes, really.</p>
         <p>CSS allows complete and total control over the style of a hypertext document. The only way this can be illustrated in a way that gets people excited is by demonstrating what it can truly be, once the reins are placed in the hands of those able to create beauty from structure. Designers and coders alike have contributed to the beauty of the web; we can always push it further.</p>
     </div>
@@ -41,8 +41,6 @@
         <p>Strong visual design has always been our focus. You are modifying this page, so strong CSS skills are necessary too, but the example files are commented well enough that even CSS novices can use them as starting points. Please see the CSS Resource Guide for advanced tutorials and tips on working with CSS.</p>
         <p>You may modify the style sheet in any way you wish, but not the HTML. This may seem daunting at first if you’ve never worked this way before, but follow the listed links to learn more, and use the sample files as a guide.</p>
         <p>Download the sample HTML and CSS to work on a copy locally. Once you have completed your masterpiece (and please, don’t submit half-finished work) upload your CSS file to a web server under your control. Send us a link to an archive of that file and all associated assets, and if we choose to use it we will download it and place it on our server.</p>
-    </div>
-    <div class="benefits">
         <h3>Benefits</h3>
         <p>Why participate? For recognition, inspiration, and a resource we can all refer to showing people how amazing CSS really can be. This site serves as equal parts inspiration for those working on the web today, learning tool for those who will be tomorrow, and gallery of future techniques we can all look forward to.</p>
     </div>
@@ -52,7 +50,7 @@
         <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
         <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
         <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work.</p>
-        <p role="contentinfo">
+        <p class="contentinfo">
             By
             <a href="http://www.mezzoblue.com/">Dave Shea</a>
             Bandwidth graciously donated by
@@ -83,48 +81,48 @@
     <div class="wrapper">
     <div class="design-section" id="design-section">
         <h3>Select a Design</h3>
-            <nav>
+            <nav class="design">
                 <ul>
                     <li>
-                        <a href="http://www.csszengarden.com/221/">Mid Century modern
+                        <a class ="t" href="http://www.csszengarden.com/221/">Mid Century modern
                         </a>
                         by
-                        <a href="http://andrewlohman.com/">Andrew Lohman</a>
+                        <a class ="b" href="http://andrewlohman.com/">Andrew Lohman</a>
                     </li>
                     <Li>
-                        <a href="http://www.csszengarden.com/220/">Garments</a>
+                        <a class ="t" href="http://www.csszengarden.com/220/">Garments</a>
                         by
-                        <a href="http://danielmall.com/">Dan Mall</a>
+                        <a class ="b" href="http://danielmall.com/">Dan Mall</a>
                     </Li>
                     <li>
-                        <a href="http://www.csszengarden.com/219/">Steel</a>
+                        <a class ="t" href="http://www.csszengarden.com/219/">Steel</a>
                         by
-                        <a href="http://steffen-knoeller.de/">Steffen Knoeller</a>
+                        <a class ="b" href="http://steffen-knoeller.de/">Steffen Knoeller</a>
                     </li>
                     <li>
-                        <a href="http://www.csszengarden.com/218"/>Apothecary</a>
+                        <a class ="t" href="http://www.csszengarden.com/218"/>Apothecary</a>
                         by
-                        <a href="http://trentwalton.com/">Trent Walton</a>
+                        <a class ="b" href="http://trentwalton.com/">Trent Walton</a>
                     </li>
                     <li>
-                        <a href="/217/" class="design-name">Screen Filler</a>
+                        <a class ="t" href="/217/" class="design-name">Screen Filler</a>
                         " by
-                        <a href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
+                        <a class ="b" href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
                     </li>
                     <li>
-                        <a href="/216/" class="design-name">Fountain Kiss</a>
+                        <a class ="t" href="/216/" class="design-name">Fountain Kiss</a>
                         " by
-                        <a href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
+                        <a class ="b" href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
                     </li>
                     <li>
-                        <a href="/215/" class="design-name">A Robot Named Jimmy</a>
+                        <a class ="t" href="/215/" class="design-name">A Robot Named Jimmy</a>
                         " by
-                        <a href="http://meltmedia.com/" class="designer-name">meltmedia</a>
+                        <a class ="b" href="http://meltmedia.com/" class="designer-name">meltmedia</a>
                     </li>
                     <li>
-                        <a href="/214/" class="design-name">Verde Moderna</a>
+                        <a class ="t" href="/214/" class="design-name">Verde Moderna</a>
                         " by
-                        <a href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a>
+                        <a class ="b" href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a>
                     </li>
                 </ul>
             </nav>
@@ -136,7 +134,7 @@
                     <li class="next">
                         <a href="/214/page1">
                              Next Designs 
-                             <span class="indicator">></span>
+                             <span class="indicator"></span>
                         </a>
                     </li>
                     <li class="viewall">
