--- a/assignments/projects/zengarden/index.html
+++ b/assignments/projects/zengarden/index.html
@@ -50,14 +50,14 @@
         <p>Luckily, designing this way shows how well various browsers have implemented CSS by now. When sticking to the guidelines you should see fairly consistent results across most modern browsers. Due to the sheer number of user agents on the web these days — especially when you factor in mobile — pixel-perfect layouts may not be possible across every platform. That’s okay, but do test in as many as you can. Your design should work in at least IE9+ and the latest Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).</p>
         <p>We ask that you submit original artwork. Please respect copyright laws. Please keep objectionable material to a minimum, and try to incorporate unique and interesting visual themes to your work. We’re well past the point of needing another garden-related design.</p>
         <p>This is a learning exercise as well as a demonstration. You retain full copyright on your graphics (with limited exceptions, see submission guidelines), but we ask you release your CSS under a Creative Commons license identical to the one on this site so that others may learn from your work.</p>
-        <p class="contentinfo">
+        <div class="contentinfo">
             By
             <a href="http://www.mezzoblue.com/">Dave Shea</a>
             Bandwidth graciously donated by
             <a href="http://www.mediatemple.net/">mediatemple</a>
             Now available:
             <a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/">Zen Garden, the book</a>
-        </p>
+        </div>
     </div>
     <footer>
         <a href ="http://validator.w3.org/check/referer" title="Check the valiidity of this site's HTML" class="zen-validate-html">
